@@ -45,7 +45,7 @@
                     <!-- This execution is used to run javafxdata first
                     as pomIncludes does not allow to order builds -->
                     <execution>
-                        <id>forked-install</id>
+                        <id>forked-install0</id>
                         <phase>install</phase>
                         <goals>
                             <goal>run</goal>
@@ -54,6 +54,26 @@
                             <projectsDirectory>${basedir}</projectsDirectory>
                             <pomIncludes>
                                 <pomInclude>scenebuilder.metadata.javafx.customization/pom.xml</pomInclude>
+                            </pomIncludes>
+                            <streamLogs>true</streamLogs>
+                            <goals>
+                                <goal>clean</goal>
+                                <goal>install</goal>
+                            </goals>
+                            <mavenOpts>--add-opens java.base/java.lang=ALL-UNNAMED</mavenOpts>
+                        </configuration>
+                    </execution>
+                    <!-- This execution is used to run javafxdata first
+                    as pomIncludes does not allow to order builds -->
+                    <execution>
+                        <id>forked-install1</id>
+                        <phase>install</phase>
+                        <goals>
+                            <goal>run</goal>
+                        </goals>
+                        <configuration>
+                            <projectsDirectory>${basedir}</projectsDirectory>
+                            <pomIncludes>
                                 <pomInclude>scenebuilder.metadata.javafx.data/pom.xml</pomInclude>
                             </pomIncludes>
                             <streamLogs>true</streamLogs>
